kubetraining/configmap.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-web
  namespace: web-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-web
  template:
    metadata:
      labels:
        app: nginx-web
    spec:
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: nginx
          image: nginx:1.25.5
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 300m
              memory: 256Mi
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 3
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
          volumeMounts:
            - name: site-config
              mountPath: /usr/share/nginx/html
              readOnly: true
      volumes:
        - name: site-config
          configMap:
            name: site-config
---

apiVersion: v1
kind: Service
metadata:
  name: nginx-web
  namespace: web-demo
spec:
  selector:
    app: nginx-web
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP

---
---
#This is not working, please fix while testing
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: nginx-web
#   namespace: web-demo
#   annotations:
#     nginx.ingress.kubernetes.io/rewrite-target: /
# spec:
#   ingressClassName: nginx
#   rules:
#     - http:
#         paths:
#           - path: /
#             pathType: Prefix
#             backend:
#               service:
#                 name: nginx-web
#                 port:
#                   number: 80
